fix: live feed date text overflow

--- a/components/SlotGame/tabs/AllRolls/AllRolls.module.scss
+++ b/components/SlotGame/tabs/AllRolls/AllRolls.module.scss
@@ -65,7 +65,7 @@
           text-align: left;
           font-style: normal;
           font-weight: 700;
-          font-size: 14px;
+          font-size: 13px;
           line-height: 22px;
           color: var(--foreground);
         }
@@ -91,7 +91,7 @@
         &:nth-of-type(3) {
           font-style: normal;
           font-weight: 500;
-          font-size: 14px;
+          font-size: 13px;
           line-height: 22px;
           text-align: right;
           color: var(--gray);
@@ -105,7 +105,7 @@
           h3 {
             font-style: normal;
             font-weight: 700;
-            font-size: 14px;
+            font-size: 13px;
             line-height: 22px;
             color: var(--foreground);
             margin-left: 8px;
